Fix CABAL_DIR and pass hackage tarball's path explicitly
We don't have proper support for cabal's new XDG paths so we do this.

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
+env:
+  CABAL_DIR: $HOME/.cabal
+
 jobs:
   update-hackage:
     runs-on: ubuntu-latest
@@ -19,7 +22,7 @@ jobs:
       - name: "Update hackage.nix and stackage.nix"
         run: |
           nix run github:input-output-hk/haskell.nix#haskell-nix.cabal-install.ghc8107 -- v2-update
-          nix run github:input-output-hk/haskell.nix#haskell-nix.nix-tools.ghc8107.project.hsPkgs.nix-tools.components.exes.hackage-to-nix -- .
+          nix run github:input-output-hk/haskell.nix#haskell-nix.nix-tools.ghc8107.project.hsPkgs.nix-tools.components.exes.hackage-to-nix -- . $CABAL_DIR/packages/hackage.haskell.org/01-index.tar
           nix run github:input-output-hk/haskell.nix#haskell-nix.update-index-state-hashes > index-state-hashes.nix
       - name: Commit and push changes
         run: |
