--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,9 +5,6 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
-env:
-  CABAL_DIR: $HOME/.cabal
-
 jobs:
   update-hackage:
     runs-on: ubuntu-latest
@@ -21,6 +18,7 @@ jobs:
             substituters = https://cache.iog.io https://cache.zw3rk.com https://cache.nixos.org/
       - name: "Update hackage.nix and stackage.nix"
         run: |
+          export CABAL_DIR=$HOME/.cabal
           nix run github:input-output-hk/haskell.nix#haskell-nix.cabal-install.ghc8107 -- v2-update
           nix run github:input-output-hk/haskell.nix#haskell-nix.nix-tools.ghc8107.project.hsPkgs.nix-tools.components.exes.hackage-to-nix -- . $CABAL_DIR/packages/hackage.haskell.org/01-index.tar
           nix run github:input-output-hk/haskell.nix#haskell-nix.update-index-state-hashes > index-state-hashes.nix
