--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,8 +19,8 @@ jobs:
       - name: "Update hackage.nix and stackage.nix"
         run: |
           export CABAL_DIR=$HOME/.cabal
-          nix run github:input-output-hk/haskell.nix#haskell-nix.cabal-install.ghc8107 -- v2-update
-          nix run github:input-output-hk/haskell.nix#haskell-nix.nix-tools.ghc8107.project.hsPkgs.nix-tools.components.exes.hackage-to-nix -- . $CABAL_DIR/packages/hackage.haskell.org/01-index.tar
+          nix run github:input-output-hk/haskell.nix#cabal -- v2-update
+          nix run github:input-output-hk/haskell.nix#hackage-to-nix -- . $CABAL_DIR/packages/hackage.haskell.org/01-index.tar
           nix run github:input-output-hk/haskell.nix#haskell-nix.update-index-state-hashes > index-state-hashes.nix
       - name: Commit and push changes
         run: |
